--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,3 +38,40 @@ body{
     justify-content: center;
     bottom: 0;
 }
+
+
+// intelInput
+
+.iti {
+    width: 100%;
+}
+
+.iti__selected-flag {
+    margin-left: 20px;
+    padding-right: 20px;
+}
+
+.iti__country-list {
+    width: 100%;
+    max-width: 425px;
+    background-color: #002D52 !important;
+    border-radius: 10px;
+    position: static !important;
+    margin-top: 10px !important;
+
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+    color: #fff;
+    top: 80px;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.iti--allow-dropdown input, .iti--allow-dropdown input[type=text], .iti--allow-dropdown input[type=tel], .iti--separate-dial-code input, .iti--separate-dial-code input[type=text], .iti--separate-dial-code input[type=tel] {
+    padding-left: 70px !important;
+}
+
+.iti--allow-dropdown .iti__flag-container:hover .iti__selected-flag {
+    background: transparent !important;
+}
