--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,3 +75,12 @@ body{
 .iti--allow-dropdown .iti__flag-container:hover .iti__selected-flag {
     background: transparent !important;
 }
+
+.iti__arrow {
+    border-top: 4px solid rgba(255, 255, 255, 0.6) !important;
+}
+
+.iti__arrow--up {
+    border-top: 3px solid transparent !important;
+    border-bottom: 4px solid rgba(255, 255, 255, 0.6) !important;
+}
