--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,9 @@ body{
     transition: all .5s .1s ease;
     margin: 0 7px !important;
 }
+.swiper-pagination_blue .swiper-pagination-bullet {
+    background: #0A4A7F !important;
+}
 
 .swiper-pagination-bullet-active {
     background: transparent !important;
@@ -26,6 +29,10 @@ body{
     border: 2px solid #fff !important;
     opacity: 1 !important;
     transition: all .1s ease;
+}
+.swiper-pagination_blue .swiper-pagination-bullet-active {
+    border: 2px solid #0A4A7F !important;
+    background: transparent !important;
 }
 
 .swiper-wrapper {
