--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -91,3 +91,7 @@ body{
     border-top: 3px solid transparent !important;
     border-bottom: 4px solid rgba(255, 255, 255, 0.6) !important;
 }
+
+.mySwiper-about .swiper-pagination {
+    bottom: 70px !important;
+}
