--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -2208,6 +2208,14 @@ video {
   border-top-width: 2px;
 }
 
+.border-dashed {
+  border-style: dashed;
+}
+
+.border-none {
+  border-style: none;
+}
+
 .border-\[\#FFFFFF66\] {
   border-color: #FFFFFF66;
 }
@@ -2316,6 +2324,10 @@ video {
 
 .bg-whiteOp-200 {
   background-color: #FFFFFF1A;
+}
+
+.bg-\[\#0A4A7F\]\/90 {
+  background-color: rgb(10 74 127 / 0.9);
 }
 
 .bg-\[url\(\'\.\/\.\.\/img\/about\/apartment-bgd\.jpg\'\)\] {
@@ -2553,6 +2565,11 @@ video {
 .py-\[60px\] {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 
 .pb-10 {
@@ -2829,6 +2846,10 @@ video {
 
 .text-whiteOp-300 {
   color: #FFFFFF33;
+}
+
+.text-\[\] {
+  color: ;
 }
 
 .underline {
