--- a/src/scss/blocks/_base.scss
+++ b/src/scss/blocks/_base.scss
@@ -16,13 +16,16 @@
         @apply invisible pb-12 opacity-0 hidden group-[.active]:block group-[.active]:visible group-[.active]:opacity-100 group-[.active]:mt-7 transition-all [&_*]:text-white [&_*]:text-sm md:[&_*]:text-lg [&_*]:py-1 mt-8 [&_li]:before:w-[6px] md:[&_li]:before:w-[8px] [&_li]:before:h-[6px] md:[&_li]:before:h-[8px] [&_li]:before:min-w-[6px] md:[&_li]:before:min-w-[8px] [&_li]:before:mr-2 [&_li]:before:rounded-full [&_li]:before:bg-white [&_li]:before:block [&_li]:flex [&_li]:items-center
     }
     .white-button {
-        @apply w-fit px-5 md:px-8 py-4 block text-sm md:text-base bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 transition-all md:m-0
+        @apply w-fit px-5 md:px-8 py-4 lg:py-5 block text-sm md:text-base bg-white rounded-xl text-center font-bold whitespace-nowrap text-blue-500 hover:text-white hover:bg-blue-400 transition-all md:m-0
     }
     .white-border-button {
         @apply text-white font-bold hover:bg-white hover:text-blue-400 transition-all rounded-[10px] border-white border-[1px] text-sm md:text-base cursor-pointer px-7 py-4 md:py-5 mx-auto block mt-12
     }
     .blue-border-button {
         @apply text-blue-600 py-4 px-8 text-sm font-bold border border-blue-600 rounded-[10px] block w-fit
+    }
+    .custom-input {
+        @apply bg-white/10 px-5 py-4 lg:py-6 w-full text-sm text-white leading-[120%] lg:leading-[90%] rounded-[10px] outline-none placeholder:text-white/60 block
     }
 }
 
