--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -861,6 +861,13 @@ video {
   }
 }
 
+@media (min-width: 1024px) {
+  .white-button {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+}
+
 .white-border-button {
   margin-left: auto;
   margin-right: auto;
@@ -922,6 +929,52 @@ video {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(0 45 82 / var(--tw-text-opacity));
+}
+
+.custom-input {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgb(255 255 255 / 0.1);
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  line-height: 120%;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.custom-input::-webkit-input-placeholder {
+  color: rgb(255 255 255 / 0.6);
+}
+
+.custom-input::-moz-placeholder {
+  color: rgb(255 255 255 / 0.6);
+}
+
+.custom-input:-ms-input-placeholder {
+  color: rgb(255 255 255 / 0.6);
+}
+
+.custom-input::-ms-input-placeholder {
+  color: rgb(255 255 255 / 0.6);
+}
+
+.custom-input::placeholder {
+  color: rgb(255 255 255 / 0.6);
+}
+
+@media (min-width: 1024px) {
+  .custom-input {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    line-height: 90%;
+  }
 }
 
 .sr-only {
@@ -998,6 +1051,10 @@ video {
 
 .-top-14 {
   top: -3.5rem;
+}
+
+.-top-5 {
+  top: -1.25rem;
 }
 
 .bottom-0 {
@@ -1186,6 +1243,10 @@ video {
 
 .z-\[11\] {
   z-index: 11;
+}
+
+.z-\[1\] {
+  z-index: 1;
 }
 
 .z-\[2\] {
@@ -1585,6 +1646,10 @@ video {
   height: 84px;
 }
 
+.h-\[94px\] {
+  height: 94px;
+}
+
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -1699,6 +1764,10 @@ video {
   width: calc(100% + 60px);
 }
 
+.w-\[calc\(100\%_\+_80px\)\] {
+  width: calc(100% + 80px);
+}
+
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -1707,10 +1776,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[calc\(100\%_\+_80px\)\] {
-  width: calc(100% + 80px);
 }
 
 .min-w-11 {
@@ -1837,6 +1902,10 @@ video {
   max-width: 40px;
 }
 
+.max-w-\[436px\] {
+  max-width: 436px;
+}
+
 .max-w-\[508px\] {
   max-width: 508px;
 }
@@ -1847,6 +1916,10 @@ video {
 
 .max-w-\[548px\] {
   max-width: 548px;
+}
+
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 
 .max-w-\[60px\] {
@@ -1881,10 +1954,6 @@ video {
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-}
-
-.max-w-\[436px\] {
-  max-width: 436px;
 }
 
 .max-w-none {
@@ -1953,6 +2022,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.resize-none {
+  resize: none;
 }
 
 .grid-cols-1 {
@@ -2228,10 +2301,6 @@ video {
   border-style: dashed;
 }
 
-.border-none {
-  border-style: none;
-}
-
 .border-\[\#FFFFFF66\] {
   border-color: #FFFFFF66;
 }
@@ -2286,10 +2355,6 @@ video {
 
 .bg-\[\#031523\]\/90 {
   background-color: rgb(3 21 35 / 0.9);
-}
-
-.bg-\[\#0A4A7F\]\/90 {
-  background-color: rgb(10 74 127 / 0.9);
 }
 
 .bg-\[\#111111\] {
@@ -3459,6 +3524,11 @@ video {
   color: rgb(14 136 236 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(59 110 153 / var(--tw-text-opacity));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -3984,10 +4054,6 @@ video {
     row-gap: 3.5rem;
   }
 
-  .md\:whitespace-nowrap {
-    white-space: nowrap;
-  }
-
   .md\:rounded-2xl {
     border-radius: 1rem;
   }
@@ -4362,8 +4428,20 @@ video {
     right: -9rem;
   }
 
+  .lg\:-right-4 {
+    right: -1rem;
+  }
+
+  .lg\:-top-10 {
+    top: -2.5rem;
+  }
+
   .lg\:bottom-40 {
     bottom: 10rem;
+  }
+
+  .lg\:bottom-\[154px\] {
+    bottom: 154px;
   }
 
   .lg\:bottom-\[5px\] {
@@ -4420,6 +4498,10 @@ video {
 
   .lg\:top-1\/3 {
     top: 33.333333%;
+  }
+
+  .lg\:top-5 {
+    top: 1.25rem;
   }
 
   .lg\:top-\[-20px\] {
@@ -4529,6 +4611,10 @@ video {
     margin-bottom: 50px;
   }
 
+  .lg\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
   .lg\:ml-auto {
     margin-left: auto;
   }
@@ -4561,6 +4647,14 @@ video {
     margin-top: -75px;
   }
 
+  .lg\:mt-\[-40px\] {
+    margin-top: -40px;
+  }
+
+  .lg\:mb-\[40px\] {
+    margin-bottom: 40px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -4587,12 +4681,20 @@ video {
     height: 18rem;
   }
 
+  .lg\:h-\[120px\] {
+    height: 120px;
+  }
+
   .lg\:h-\[172px\] {
     height: 172px;
   }
 
   .lg\:h-\[450px\] {
     height: 450px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-72 {
@@ -4824,6 +4926,11 @@ video {
     border-top-right-radius: 1rem;
   }
 
+  .lg\:rounded-t-\[20px\] {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
   .lg\:rounded-bl-3xl {
     border-bottom-left-radius: 1.5rem;
   }
@@ -4899,6 +5006,10 @@ video {
     padding: 0px;
   }
 
+  .lg\:p-10 {
+    padding: 2.5rem;
+  }
+
   .lg\:p-4 {
     padding: 1rem;
   }
@@ -4967,9 +5078,19 @@ video {
     padding-bottom: 6rem;
   }
 
+  .lg\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
   .lg\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .lg\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .lg\:py-\[100px\] {
@@ -5041,6 +5162,11 @@ video {
     text-align: end;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -5082,6 +5208,10 @@ video {
     text-decoration-line: none;
   }
 
+  .lg\:opacity-50 {
+    opacity: 0.5;
+  }
+
   .lg\:before\:bottom-0::before {
     content: var(--tw-content);
     bottom: 0px;
@@ -5097,24 +5227,24 @@ video {
     top: auto;
   }
 
-  .lg\:before\:h-\[400px\]::before {
-    content: var(--tw-content);
-    height: 400px;
-  }
-
   .lg\:before\:h-\[10px\]::before {
     content: var(--tw-content);
     height: 10px;
   }
 
-  .lg\:before\:w-\[1px\]::before {
+  .lg\:before\:h-\[400px\]::before {
     content: var(--tw-content);
-    width: 1px;
+    height: 400px;
   }
 
   .lg\:before\:w-\[10px\]::before {
     content: var(--tw-content);
     width: 10px;
+  }
+
+  .lg\:before\:w-\[1px\]::before {
+    content: var(--tw-content);
+    width: 1px;
   }
 
   .lg\:before\:rounded::before {
